# Urbanium

./: .gitignore  README.md  TIME_SIMULATION_GUIDE.md  Urbanium.sln  pyproject.toml
.github/instructions/: copilot.instructions.md
Urbanium.Web/: Urbanium.Web.sln
Urbanium.Web/Urbanium/: AI_MAYOR_SETUP.md  CITIZEN_PERSONALITY_SYSTEM.md  Program.cs  Urbanium.csproj  appsettings.Development.json  appsettings.json
Urbanium.Web/Urbanium/Components/: App.razor  _Imports.razor
Urbanium.Web/Urbanium/Configuration/: LMStudioSettings.cs  SimulationSettings.cs
Urbanium.Web/Urbanium/Models/: Building.cs  Citizen.cs  CitizenState.cs  CityState.cs  Mayor.cs
Urbanium.Web/Urbanium/Properties/: launchSettings.json
Urbanium.Web/Urbanium/Services/: CitizenAIEngine.cs  CitizenDecisionService.cs  CitySimulationService.cs  CityTimeService.cs  MayorAgentService.cs
docs/: README.md
examples/: life_simulation_demo.py
src/Urbanium.Web/: Program.cs  Urbanium.Web.csproj  appsettings.json
src/Urbanium.Web/AI/: AIConfiguration.cs  AIStructuredOutputs.cs  CitizenAIService.cs
src/Urbanium.Web/Actions/: ActionExecutor.cs  Actions.cs
src/Urbanium.Web/Agents/: Citizen.cs
src/Urbanium.Web/Components/: App.razor  _Imports.razor
tests/: __init__.py  test_actions.py  test_agents.py  test_engine.py
urbanium/: __init__.py  main.py
urbanium/actions/: __init__.py  base.py  commute.py  eat.py  housing.py  job_search.py  rest.py  social_actions.py  socialize.py  work.py
urbanium/agents/: __init__.py  citizen.py  decision.py  emotions.py  household.py  life_events.py  lifecycle.py  memory.py  needs.py  relationships.py  skills.py  social.py  traits.py
urbanium/ai/: __init__.py  client.py  decision.py  prompts.py  schemas.py
urbanium/city/: __init__.py  locations.py  workplace.py
urbanium/engine/: __init__.py  economy.py  events.py  geography.py  institutions.py  state.py  tick.py  time.py  validator.py  world.py
urbanium/metrics/: __init__.py  aggregator.py  economic.py  employment.py  observer.py  social.py
urbanium/multiagent/: __init__.py  coordinator.py  interactions.py  messaging.py  runner.py
urbanium/scenarios/: __init__.py  base.py  simple_city.py
urbanium/ui/: __init__.py
(+25 files in other folders)
